flux/infrastructure/rook-ceph/dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: rook-ceph-dash
    namespace: rook-ceph
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "ceph.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: rook-ceph-mgr-dashboard
                port: 8443
